Linking multiple page and new style to active link

--- a/about.html
+++ b/about.html
@@ -15,13 +15,12 @@
 <body>
 
 <nav id=myDIV class="topnav">
-  <a class="btn" href="index.html"><i class="fas fa-home"></i> Home</a>
+  <a href="index.html"><i class="fas fa-home"></i> Home</a>
   <a href="news.html"><i class="fas fa-globe"></i> News</a>
   <a href="contact.html"><i class="fas fa-envelope-open-text"></i> Contact</a>
-  <a href="about.html"><i class="fas fa-users"></i> About</a>
+  <a class="btn" href="about.html"><i class="fas fa-users"></i> About</a>
 </nav>
-
-<h1>Our home webpage</h1>
+<h1>About us!</h1>
 
 </body>
 </html>
