--- a/news.html
+++ b/news.html
@@ -15,13 +15,13 @@
 <body>
 
 <nav id=myDIV class="topnav">
-  <a class="btn" href="index.html"><i class="fas fa-home"></i> Home</a>
-  <a href="news.html"><i class="fas fa-globe"></i> News</a>
+  <a href="index.html"><i class="fas fa-home"></i> Home</a>
+  <a class="btn" href="news.html"><i class="fas fa-globe"></i> News</a>
   <a href="contact.html"><i class="fas fa-envelope-open-text"></i> Contact</a>
   <a href="about.html"><i class="fas fa-users"></i> About</a>
 </nav>
 
-<h1>Our home webpage</h1>
+<h1>What's new?</h1>
 
 </body>
 </html>
