Add css display: flex styling

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 </style>
 </head>
 <body>
-<nav id=myDIV class="topnav">
+<nav class="topnav">
   <a href="index.html"><i class="fas fa-home"></i> Home</a>
   <a href="news.html"><i class="fas fa-globe"></i> News</a>
   <a class="btn" href="contact.html"><i class="fas fa-envelope-open-text"></i> Contact</a>
