--- a/news.html
+++ b/news.html
@@ -11,7 +11,7 @@
 </style>
 </head>
 <body>
-<nav id=myDIV class="topnav">
+<nav class="topnav">
   <a href="index.html"><i class="fas fa-home"></i> Home</a>
   <a class="btn" href="news.html"><i class="fas fa-globe"></i> News</a>
   <a href="contact.html"><i class="fas fa-envelope-open-text"></i> Contact</a>
