--- a/Strona_MJU/about.html
+++ b/Strona_MJU/about.html
@@ -4,18 +4,15 @@
 <link rel="stylesheet" href="styleMJU.css">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-<style>
 
-
-</style>
 </head>
 <body>
 <ul>
-  <li><a href="home.asp">Strona główna</a></li>
-  <li><a href="sklep.asp">Sklep</a></li>
-  <li><a href="artykuly.asp">Artykuły</a></li>
-  <li><a href="kontakt.asp">Kontakt</a></li>
-  <li><a href="about.asp">O nas</a></li>
+  <li><a href="home.html">Strona główna</a></li>
+  <li><a href="sklep.html">Sklep</a></li>
+  <li><a href="artykuly.html">Artykuły</a></li>
+  <li><a href="kontakt.html">Kontakt</a></li>
+  <li><a href="about.html">O nas</a></li>
 </ul>
 
 
