--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,8 @@
 <style>
   body {
     font-family: "Montserrat";
+    background-color: #353535;
   }
-
 </style>
 </head>
 <body>
@@ -16,18 +16,19 @@
     <ul class="menu">
       <li class="logo">Paula Schabińska</li>
       <li class="item"><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-      <li class="item"><a tabindex="0" href="news.html"><i class="fas fa-globe"></i> News <i class="fas fa-angle-down"></i> </a>
-        <!-- <ul class="submenu">
-          <li class="item"><a href="today.html"> Today</a></li>
-          <li class="item"><a href="month.html"> Last month</a></li>
-          <li class="item"><a href="year.html"> Top news in this year</a></li>
-        </ul> -->
+      <li class="has-submenu"><i class="fas fa-globe"></i> News <i class="fas   fa-angle-down"></i> </a>
+        <ul class="submenu">
+          <li class="sub-item"><a href="today.html"> Today</a></li>
+          <li class="sub-item"><a href="month.html"> Last month</a></li>
+          <li class="sub-item"><a href="year.html"> Top news in this year</a></li>
+        </ul>
       </li>
       <li class="item"><a href="contact.html"><i class="fas fa-envelope-open-text"></i> Contact</a></li>
       <li class="item"><a href="about.html"><i class="fas fa-users"></i> About</a></li>
       <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
   </ul> 
   </nav>
+
   <script src="script.js"></script>
 </body>
 </html>
