Modify MJU content.

--- a/Strona_MJU/home.html
+++ b/Strona_MJU/home.html
@@ -14,7 +14,12 @@
   <li><a href="kontakt.html">Kontakt</a></li>
   <li><a href="about.html">O nas</a></li>
 </ul>
-
+<h1 class="chusty_home">
+  Witamy w sklepie z chustami i nosidłami do noszenia dzieci.
+</h1>
+<p class="chusty_paragraf">
+  Zapraszamy do kontaktu.
+</p>
 
 </body>
 </html>
